idea/testData/multiplatform/incompleteActualization/js/js.kt
package foo

actual class ExpectInCommonActualInJsOnly
actual class <!LINE_MARKER("descr='Has declaration in common module'")!>ExpectInMiddleActualInJsOnly<!>